--- a/DarkModeFlipper/public/style.css
+++ b/DarkModeFlipper/public/style.css
@@ -1,23 +1,46 @@
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: tahoma;
 }
 
-.mode-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+body {
+  background-color: #333;
 }
 
-.button-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.box-1 {
+  padding: 5px;
+  text-align: center;
 }
 
-h1 {
-  color: #f5f5dc;
+.box-2 {
+  width: 25%;
+  padding: 10px;
+  margin: auto;
+  background-color: #f5f5dc;
+  border-width: 3px;
+  border-style: solid;
+  border-color: #111;
+  border-radius: 10px;
+}
+
+.btn {
+  width: 15%;
+  background-color: #f5f5dc; 
+  color: #333;
+  font-size: 18px;
+  font-weight: 800;
+  padding: 10px;
+  margin: auto;
+  text-decoration: none;
+  overflow: hidden;
+  outline: none;
+  border-width: 3px;
+  border-style: solid;
+  border-color: #111;
+  border-radius: 10px;
+}
+
+#heading {
+  color: #333
 }
